# Generated by Django 6.0.6 on 2026-06-19 21:04

from django.conf import settings
from django.db import migrations, models


def _dedupe(model, base_qs, scope_fields, value_field):
    """
    Rend uniques les `value_field` au sein de chaque groupe `scope_fields`
    (sur le sous-ensemble `base_qs`), AVANT d'ajouter les UniqueConstraint
    (sinon AddConstraint planterait).

    Stratégie non destructive : on garde la 1re ligne (pk le plus bas) de chaque
    groupe telle quelle ; les suivantes reçoivent un suffixe `_dup{pk}` sur le
    champ en collision. Idempotent : si rien ne collisionne, ne touche rien.

    Pourquoi suffixer plutôt que supprimer ? Une catégorie/sous-cat peut porter
    des transactions (SET_NULL) et un BudgetTarget — la détruire serait une perte
    de données. Renommer préserve tout et reste rattrapable à la main ensuite.
    """
    seen: set[tuple] = set()
    order = list(scope_fields) + [value_field]
    for row in base_qs.order_by("pk").values("pk", *order):
        key = tuple(row[f] for f in scope_fields) + (row[value_field],)
        if key in seen:
            new_value = f"{row[value_field]}_dup{row['pk']}"[:100]
            model.objects.filter(pk=row["pk"]).update(**{value_field: new_value})
        else:
            seen.add(key)


def dedupe_before_constraints(apps, schema_editor):
    """Nettoie les éventuelles collisions héritées avant les nouvelles contraintes."""
    Category = apps.get_model("transactions", "Category")
    SubCategory = apps.get_model("transactions", "SubCategory")

    # Système (owner NULL) : unique global sur slug / name.
    _dedupe(Category, Category.objects.filter(owner__isnull=True), [], "slug")
    _dedupe(Category, Category.objects.filter(owner__isnull=True), [], "name")
    # Perso (owner set) : unique par (owner, slug) et (owner, name).
    _dedupe(
        Category, Category.objects.filter(owner__isnull=False), ["owner_id"], "slug"
    )
    _dedupe(
        Category, Category.objects.filter(owner__isnull=False), ["owner_id"], "name"
    )

    # SubCategory.name unique par parent (inchangé) — peut déjà collisionner ?
    # Non, l'ancien unique_together (category, name) le garantissait. On nettoie
    # quand même par prudence (migration idempotente / data legacy CLI).
    _dedupe(SubCategory, SubCategory.objects.all(), ["category_id"], "name")
    _dedupe(SubCategory, SubCategory.objects.filter(owner__isnull=True), [], "slug")
    _dedupe(
        SubCategory,
        SubCategory.objects.filter(owner__isnull=False),
        ["owner_id"],
        "slug",
    )


def noop_reverse(apps, schema_editor):
    """
    Reverse = no-op. Les suffixes `_dupN` posés à l'aller sont des données valides
    après coup ; on ne peut pas distinguer un slug légitimement nommé ainsi d'un
    renommage de migration. Le rollback retire simplement les contraintes (géré
    par AddConstraint.reverse), pas besoin de défaire le dédoublonnage.
    """
    pass


class Migration(migrations.Migration):
    dependencies = [
        ("transactions", "0017_backfill_category_owner"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.AlterUniqueTogether(
            name="subcategory",
            unique_together=set(),
        ),
        migrations.AlterField(
            model_name="category",
            name="name",
            field=models.CharField(max_length=100),
        ),
        migrations.AlterField(
            model_name="category",
            name="slug",
            field=models.SlugField(max_length=100),
        ),
        migrations.AlterField(
            model_name="subcategory",
            name="slug",
            field=models.SlugField(max_length=100),
        ),
        # Dédoublonnage défensif des données existantes AVANT les contraintes,
        # sinon AddConstraint planterait sur une collision héritée (SR-004).
        # reverse_code explicite → migration réversible (rollback testé 0018↔0017).
        migrations.RunPython(dedupe_before_constraints, reverse_code=noop_reverse),
        migrations.AddConstraint(
            model_name="category",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", True)),
                fields=("slug",),
                name="category_system_slug_uniq",
            ),
        ),
        migrations.AddConstraint(
            model_name="category",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", True)),
                fields=("name",),
                name="category_system_name_uniq",
            ),
        ),
        migrations.AddConstraint(
            model_name="category",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", False)),
                fields=("owner", "slug"),
                name="category_owner_slug_uniq",
            ),
        ),
        migrations.AddConstraint(
            model_name="category",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", False)),
                fields=("owner", "name"),
                name="category_owner_name_uniq",
            ),
        ),
        migrations.AddConstraint(
            model_name="subcategory",
            constraint=models.UniqueConstraint(
                fields=("category", "name"), name="subcategory_category_name_uniq"
            ),
        ),
        migrations.AddConstraint(
            model_name="subcategory",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", True)),
                fields=("slug",),
                name="subcategory_system_slug_uniq",
            ),
        ),
        migrations.AddConstraint(
            model_name="subcategory",
            constraint=models.UniqueConstraint(
                condition=models.Q(("owner__isnull", False)),
                fields=("owner", "slug"),
                name="subcategory_owner_slug_uniq",
            ),
        ),
    ]
