erDiagram

    %% ==========================================================================
    %% USERS — App users/
    %% Email-based login. Profile = UI preferences separate from auth.
    %% ==========================================================================

    CustomUser {
        bigint id PK
        string email UK
        string password_hash
        string first_name
        string last_name
        boolean is_active
        boolean is_staff
        boolean is_superuser
        datetime last_login
        datetime date_joined
    }

    Profile {
        bigint id PK
        bigint user_id FK
        string language
        string display_currency
    }

    %% ==========================================================================
    %% ACCOUNTS — App accounts/
    %% Banking infrastructure. AccountAccess REMOVED (YAGNI — 2-user app).
    %% Who uses what = Card.user, not a permissions table.
    %%
    %% ── GUIDE : Ajouter une banque ──────────────────────────────────────────
    %% 1. Créer Bank en DB (admin ou seed) : name, slug, country, default_currency
    %% 2. Créer connectors/<slug>/parser.py — implémenter matches_file(), parse()
    %%    et optionnellement extract_balance(), extract_account_identifier()
    %% 3. Ajouter le connecteur dans CONNECTORS (connectors/resolver.py)
    %% 4. Ajouter la logique de matching dans resolve_accounts() (même fichier)
    %%
    %% ── GUIDE : Ajouter un compte (banque existante) ─────────────────────────
    %% 1. Créer Account en DB : bank, name, account_type, currency, is_active=True
    %% 2. Créer la spécialisation :
    %%    - CheckingAccount (iban + bic) pour comptes courants
    %%    - SavingsAccount (interest_rate) pour livrets
    %% 3. Renseigner Account.contract_number avec l'identifiant du fichier :
    %%    - UBS  → IBAN sans espaces (ex: "CH93XXXXXXXXXXXXXXXXXXX")
    %%    - CIC  → RIB sans espaces (ex: "10096XXXXXXXXXXXXXXXXXXX")
    %%    - Yuh  → laisser vide (convention : 1 seul compte Yuh checking actif)
    %%
    %% ── GUIDE : Ajouter une carte ────────────────────────────────────────────
    %% 1. Créer Card en DB : checking_account, user, last_four, card_type
    %% Le connecteur lit card_last_four dans chaque ligne et fait le matching
    %% automatiquement via un dict {last_four: Card} chargé en 1 seule query.
    %% ==========================================================================

    Bank {
        bigint id PK
        string name UK
        string slug UK
        string country
        string default_currency
        string icon_slug
        string domain
        boolean is_active
    }

    Account {
        bigint id PK
        bigint bank_id FK
        string name
        string account_type
        string currency
        string contract_number
        boolean is_active
        datetime created_at
    }

    %% Specialised tables — pattern OneToOne (primary_key=True) :
    %% Account.account_type est le discriminateur → dit quelle table spécialisée lire.
    %% CheckingAccount : comptes courants (Yuh, UBS, CIC C/C)
    %% SavingsAccount  : livrets (CIC Livret A, LDDS)
    %% Phase 4+ : PensionAccount (Finpension 3a, LP)
    %% Phase 5+ : InvestmentAccount

    CheckingAccount {
        bigint account_id PK_FK
        string iban
        string bic
    }

    Card {
        bigint id PK
        bigint checking_account_id FK
        bigint user_id FK
        string last_four
        string card_type
        boolean is_active
    }

    BalanceSnapshot {
        bigint id PK
        bigint account_id FK
        date date
        decimal balance_nullable
        decimal computed_balance_nullable
        string currency
        decimal balance_chf
        string source
    }

    %% BalanceSnapshot — deux valeurs complémentaires :
    %%   balance          = solde extrait du fichier source (nullable)
    %%                      Yuh : dans le nom de fichier (fragile — URL-encoding macOS)
    %%                      UBS : metadata ligne 6 (fiable)
    %%                      CIC : footer de chaque feuille (fiable)
    %%   computed_balance = prev_snapshot + sum(new_transactions) (nullable)
    %%                      null sur le 1er import (pas de base de calcul)
    %%   .authoritative_balance = balance ?? computed_balance (propriété Python)
    %%   .drift             = balance - computed_balance (propriété Python, None si manquant)
    %%   Un drift > 0.01 → warning dans les logs → anomalie à investiguer

    ExchangeRate {
        bigint id PK
        date date
        string from_currency
        string to_currency
        decimal rate
    }

    %% ==========================================================================
    %% TRANSACTIONS — App transactions/
    %% ==========================================================================

    Category {
        bigint id PK
        string name UK
        string slug UK
        string icon
        string colour_hex
        int order
        boolean is_system
        boolean is_active
    }

    SubCategory {
        bigint id PK
        bigint category_id FK
        string name
        string slug UK
        string icon
        string default_nature
        boolean is_active
        boolean is_system
    }

    CategorizationRule {
        bigint id PK
        bigint category_id FK
        bigint subcategory_id FK
        string keyword
        string target_field
        int priority
        boolean is_active
    }

    Transaction {
        bigint id PK
        bigint account_id FK
        bigint card_id FK
        bigint category_id FK
        bigint subcategory_id FK
        bigint categorization_rule_id FK
        bigint paired_transaction_id FK
        date date
        time time
        decimal amount
        string currency
        decimal amount_chf
        string description_raw
        string merchant_name
        string note
        string nature
        string categorization_source
        boolean is_reconciled
        boolean is_ignored
        boolean is_recurring
        boolean is_internal_transfer
        string import_hash UK
    }

    ImportLog {
        bigint id PK
        bigint account_id FK
        bigint imported_by_id FK
        string filename
        string file_hash UK
        datetime imported_at
        string status
        int count_created
        int count_skipped
        int count_errors
        string error_detail
    }

    BudgetTarget {
        bigint id PK
        bigint category_id FK
        date period
        decimal amount
    }

    %% BudgetResult: computed live from transactions — no table needed.
    %% Transaction.objects.filter(category=c, date__year=y, date__month=m).aggregate(Sum('amount_chf'))

    %% ==========================================================================
    %% SavingsAccount (implémenté — CIC Livret A / LDDS)
    %% ==========================================================================

    SavingsAccount {
        bigint account_id PK_FK
        decimal interest_rate
        string account_reference
    }

    %% ==========================================================================
    %% PHASE 4+ — Net worth (not yet implemented)
    %% ==========================================================================

    %% PensionAccount  { account_id PK_FK, pension_type, management_fee }

    %% ==========================================================================
    %% PHASE 5+ — Investments (not yet implemented)
    %% ==========================================================================

    %% InvestmentAccount     { account_id PK_FK, etf_type }
    %% Instrument            { id PK, ticker, name, type, currency, isin }
    %% InvestmentPosition    { id PK, account_id FK, instrument_id FK, ... }
    %% InvestmentTransaction { id PK, account_id FK, instrument_id FK, ... }
    %% PriceHistory          { id PK, instrument_id FK, date, close_price, currency }

    %% ==========================================================================
    %% RELATIONS
    %% ==========================================================================

    %% Users
    CustomUser ||--|| Profile : "has one"

    %% Banks & Accounts
    Bank ||--o{ Account : "hosts"
    Account ||--o| CheckingAccount : "specialised as"
    Account ||--o| SavingsAccount : "specialised as"
    CheckingAccount ||--o{ Card : "has"
    Account ||--o{ BalanceSnapshot : "balance history"
    Account ||--o{ ImportLog : "tracked by"
    Account ||--o{ Transaction : "contains"

    %% Cards & Users
    CustomUser ||--o{ Card : "cardholder"
    CustomUser ||--o{ ImportLog : "imports"

    %% Transactions
    Card |o--o{ Transaction : "source"
    Category ||--o{ SubCategory : "contains"
    Category ||--o{ Transaction : "classifies"
    Category ||--o{ CategorizationRule : "target"
    Category ||--o{ BudgetTarget : "target"
    SubCategory |o--o{ Transaction : "refines"
    SubCategory ||--o{ CategorizationRule : "refines"
    CategorizationRule |o--o{ Transaction : "categorizes"
    Transaction ||--o| Transaction : "internal transfer link"
